# incubator1

./: .gitignore  Cargo.toml  TODO.md  flake.nix
canvas/: .gitignore  Cargo.toml  index.html  package-lock.json
canvas/src/: lib.rs
chat/: main.ts
chat/public/: index.html
client/: Cargo.toml  deno.json  fresh.gen.ts  index.html  main.ts
client/islands/: Canvas.tsx  Counter.tsx
client/routes/: _app.tsx  index.tsx
client/rs_lib/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml
core/macros/tuple/: Cargo.toml
core/macros/tuple/expand/: Cargo.toml  README.md
core/macros/tuple/src/: lib.rs  tuple2.rs
core/macros/tuple/tests/: no-generics.rs  no-generics.stderr  simple-parse.rs  test.rs
core/src/: lib.rs
core/src/maths/: mod.rs  numeric.rs  point.rs  traits.rs  tuple.rs  tuple_old.rs  vector.rs
core/src/maths/traits/: abs.rs  ceil.rs  floor.rs  mod.rs  numeric.rs
core/traits/tuple/: Cargo.toml
core/traits/tuple/src/: lib.rs
hello_world/: package-lock.json
hello_world/src/: lib.rs
julia_set/: package-lock.json
nvim/: default.nix
nvim/keymaps/: default.nix
nvim/options/: default.nix
nvim/plugins/: alpha.nix  lualine.nix  nvim-tree.nix
wasm/: hello.wat
wasm/ch2/: index.html
wasm/ch3/: index.html
wasm/ch4/: index.html  memory2.wat  string.html  string.wat
wasm/game-of-life/: Cargo.toml  LICENSE_MIT
wasm/wasm-book/ch2/: utils.js
wasm/wasm-book/ch3/: hellolog.wat
wasm/wasm-book/ch4/: fib.html
