[package]
name = "tuple_derive"
version = "0.1.0"
edition = "2021"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
tuple_trait = { path = "../../traits/tuple" }
